fixing alignment issue

--- a/app/assets/stylesheets/miner.css.scss
+++ b/app/assets/stylesheets/miner.css.scss
@@ -32,6 +32,7 @@
   #host-summary {
     td:first-child {
       font-weight: normal;
+      text-align: center;
     }
   }
 }
